src/test/ui/typeck/typeck-auto-trait-no-supertraits.stderr
error[E0568]: auto traits cannot have super traits
  --> $DIR/typeck-auto-trait-no-supertraits.rs:27:19
   |
LL | auto trait Magic: Copy {}
   |            -----  ^^^^ cannot have this super trait
   |            |
   |            auto trait cannot have super traits

error: aborting due to previous error

For more information about this error, try `rustc --explain E0568`.
